Fix display problems on mobile, v.0.4

--- a/style.css
+++ b/style.css
@@ -210,6 +210,7 @@ li {
 
 .outer-btn.active {
     opacity: 1;
+    z-index: 5;
 }
 
 #lang-btn,
